--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 POO_test/__pycache__/enemy.cpython-313.pyc
 POO_test/__pycache__/Zombie.cpython-313.pyc
 POO_test/__pycache__/Ogre.cpython-313.pyc
+Enemies_python/__pycache__/Enemy.cpython-310.pyc
+Enemies_python/__pycache__/Enemy.cpython-313.pyc
+Enemies_python/__pycache__/Ogre.cpython-310.pyc
+Enemies_python/__pycache__/Ogre.cpython-313.pyc
+Enemies_python/__pycache__/Zombie.cpython-310.pyc
+Enemies_python/__pycache__/Zombie.cpython-313.pyc
